res/macOSNotif.css
/**
 *  macOSNotifJS: A simple Javascript plugin to create simulated macOS notifications on your website.
 *  <https://github.com/MattIPv4/macOSNotifJS/>
 *  Copyright (C) 2018 Matt Cowley (MattIPv4) (me@mattcowley.co.uk)
 *
 *  This program is free software: you can redistribute it and/or modify
 *   it under the terms of the GNU Affero General Public License as published
 *   by the Free Software Foundation, either version 3 of the License, or
 *   (at your option) any later version.
 *  This program is distributed in the hope that it will be useful,
 *   but WITHOUT ANY WARRANTY; without even the implied warranty of
 *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *   GNU General Public License for more details.
 *  You should have received a copy of the GNU Affero General Public License
 *   along with this program. If not, please see
 *   <https://github.com/MattIPv4/macOSNotifJS/blob/master/LICENSE> or <http://www.gnu.org/licenses/>.
 */

@import "macOSNotif.fonts.css";

.macOSNotif_Outer {
    width: 430px;
    height: 92px;
    position: fixed;
    right: 0;
    top: 5px;
    padding: 10px 0;
    overflow: hidden;
    z-index: 5000;
    -webkit-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    -ms-user-select: none;
    -khtml-user-select: none;
    user-select: none;
}

.macOSNotif_Container {
    width: 400px;
    height: 72px;
    position: absolute;
    right: -400px;
    top: 10px;
    opacity: 0.1;
    background: #f2f2f2;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    border-radius: 10px;
    border: none;
    transition: all .8s ease-in-out;

    font-weight: 300;
    color: #444;
    text-align: left;
    font-family: "SF Display", -apple-system, system-ui, BlinkMacSystemFont, "HelveticaNeue-Light",
    "Helvetica Neue Light", "Helvetica Neue", Helvetica, "Segoe UI", Roboto, Ubuntu, "Lucida Grande", sans-serif;
}

.macOSNotif_Text {
    float: left;
    width: 300px;
    padding: 10px;
    border: none;
    display: block;
}
.macOSNotif_TextClickable {
    cursor: pointer;
}
.macOSNotif_TextFull {
    width: 400px;
}

.macOSNotif_Title {
    display: block;
    padding: 5px;
    margin: 0;
    max-width: 100%;
    overflow: hidden;
    white-space: nowrap;
    vertical-align: baseline;
    text-shadow: none;
    text-overflow: ellipsis;
    border: none;

    font-size: 16px;
    line-height: 16px;
    font-weight: 400;
}

.macOSNotif_Subtitle {
    font-size: 13px;
    line-height: 16px;
    font-weight: 300;
}

.macOSNotif_Buttons {
    float: right;
    /*          Outer - Padd - Inner - Padd - Bord */
    width: calc(400px - 10px - 300px - 10px - 1px);
    border: none;
    border-left: 1px #ddd solid;
    height: 100%;
    min-height: 100%;
    padding: 0;
}

.macOSNotif_Button {
    display: block;
    cursor: pointer;
    text-align: center;
    padding: 5px 10px;
    margin: 0;
    text-decoration: none;
    line-height: calc((72px - 10px - 10px) / 2 - 1px);
    border: none;
    border-top: 1px transparent solid;
    max-width: 100%;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    text-shadow: none;

    font-size: 13px;
    font-weight: 400;
    color: #666;
}
.macOSNotif_ButtonFull {
    border: none;
    line-height: calc(72px - 5px - 5px);
    font-size: 15px;
}

.macOSNotif_Button + .macOSNotif_Button {
    border-top: 1px #ddd solid;
}

